Fix low_completeness_flags logic, add contract validation, fix __HIVE_DEFAULT_PARTITION__, update country_reporting_rate, clean README